@@ -4,7 +4,6 @@ import com.ccufs.quotes.model.Author;
 import com.ccufs.quotes.model.Quote;
 import com.ccufs.quotes.repository.AuthorRepository;
 import java.util.List;
-import java.util.stream.Collectors;
 import lombok.AllArgsConstructor;
 import org.springframework.stereotype.Service;
 
@@ -142,7 +141,7 @@ public class AuthorService {
   public List<Author> bulkSaveAuthors(List<Author> authors) {
     return authors.stream()
             .map(authorRepository::save)
-            .collect(Collectors.toList());
+            .toList();
   }
 }
 
